@@ -695,6 +695,7 @@
 #define ID_PPU_OLDPPU                   40364
 #define ID_NEWPPU                       40365
 #define ID_OLDPPU                       40366
+#define ID_CONFIG_SAVECONFIGFILE        40367
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -704,7 +705,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40367
+#define _APS_NEXT_COMMAND_VALUE         40368
 #define _APS_NEXT_CONTROL_VALUE         1205
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
